# GPURemBG

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/gpurembg/: __init__.py  cli.py  pipeline.py
src/gpurembg/algorithms/: __init__.py  base.py  isnet.py  onnx_base.py  rmbg.py  u2net.py
src/gpurembg/utils/: downloads.py
