[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpurembg"
version = "0.1.0"
description = "GPU-accelerated background removal toolkit."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "onnxruntime-gpu",
    "numpy",
    "Pillow",
    "requests",
    "tqdm",
]
authors = [
    { name = "GPURemBG Contributors" }
]

[project.urls]
Homepage = "https://github.com/ReservaDevOps/GPURemBG"

[tool.setuptools.packages.find]
where = ["src"]
